aws-stacks/vpc.yml
Resources:

  ############################################################################
  # VPC and Gateway
  ############################################################################
  StackVPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: "false"
      Tags:
        - Key: Name
          Value: StackVPC
        - Key: Description
          Value: "VPC created by CloudFormation stack"
  StackIG:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: Name
          Value: StackIG
  VPCGatewayAssoc:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref StackVPC
      InternetGatewayId: !Ref StackIG

  ############################################################################
  # Subnets and NAT Gateways
  ############################################################################

  PublicSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref StackVPC
      Tags:
        - Key: Name
          Value: PublicSubnet1
        - Key: Description
          Value: "A public subnet of the VPC"

  PrivateSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: 10.0.2.0/24
      VpcId: !Ref StackVPC
      Tags:
        - Key: Name
          Value: PrivateSubnet1
        - Key: Description
          Value: "A private subnet of the VPC"

  NATGW:
    Type: "AWS::EC2::NatGateway"
    Properties:
      SubnetId: !Ref PrivateSubnet
      ConnectivityType: private
      Tags:
        - Key: Name
          Value: NATGW
        - Key: Description
          Value: "NAT Gateway for the private subnet"

  ############################################################################
  # Public ACL
  ############################################################################

  PublicACL:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref StackVPC
      Tags:
        - Key: Name
          Value: PublicACL
        - Key: Description
          Value: "ACL for public subnet."

  PublicACLAssoc:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet
      NetworkAclId: !Ref PublicACL

  PublicInboundRule:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref PublicACL
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0

  PublicToPrivateRule:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref PublicACL
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 10.0.2.0/24

  PublicOutboundRule:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref PublicACL
      RuleNumber: 200
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0

  ############################################################################
  # Private ACL
  ############################################################################

  PrivateACL:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref StackVPC
      Tags:
        - Key: Name
          Value: PrivateACL
        - Key: Description
          Value: "ACL for private subnet."

  PrivateACLAssoc:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref PrivateSubnet
      NetworkAclId: !Ref PrivateACL

  PrivateInboundRule:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref PrivateACL
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock: 10.0.1.0/24

  PrivateOutboundRule:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref PrivateACL
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0

  ############################################################################
  # Public Route Table
  ############################################################################

  PublicRT:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref StackVPC
      Tags:
        - Key: Name
          Value: PublicRT
        - Key: Description
          Value: "Route table for public subnet."

  PublicRTAssoc:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRT
      SubnetId: !Ref PublicSubnet

  IGOutboundRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref StackIG
      RouteTableId: !Ref PublicRT

  ############################################################################
  # Private Route Table
  ############################################################################

  PrivateRT:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref StackVPC
      Tags:
        - Key: Name
          Value: PrivateRT
        - Key: Description
          Value: "Route table for the private subnet"

  PrivateRTAssoc:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateRT
      SubnetId: !Ref PrivateSubnet

  NATOutboundRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGW
      RouteTableId: !Ref PrivateRT
